logs/Opencv/build.make.004.log
[  0%] Built target _catkin_empty_exported_target
[35m[1mConsolidate compiler generated dependencies of target Opencv[0m
[ 50%] [32mBuilding CXX object CMakeFiles/Opencv.dir/src/opencv_tuto/Flipmat.cpp.o[0m
[1m/Users/yeontaemin/github/algorithm_ws/src/Opencv/src/opencv_tuto/Flipmat.cpp:6:13: [0m[0;1;31merror: [0m[1mreference to non-static member function must be called; did you mean to call it with no arguments?[0m
    if(!src.empty){
[0;1;32m        ~~~~^~~~~
[0m[0;32m                 ()
[0m1 error generated.
make[2]: *** [CMakeFiles/Opencv.dir/build.make:76: CMakeFiles/Opencv.dir/src/opencv_tuto/Flipmat.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:245: CMakeFiles/Opencv.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
